# ChangeLog for app-text/asciidoc
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.46 2008/11/13 00:38:06 ranger Exp $

  13 Nov 2008; Brent Baude <ranger@gentoo.org> asciidoc-8.2.6.ebuild:
  stable ppc64, bug 224743

  08 Nov 2008; nixnut <nixnut@gentoo.org> asciidoc-8.2.6.ebuild:
  Stable on ppc wrt bug 224743

  07 Nov 2008; Raúl Porcel <armin76@gentoo.org> asciidoc-8.2.6.ebuild:
  alpha/ia64 stable wrt #224743

  06 Nov 2008; Jeroen Roovers <jer@gentoo.org> asciidoc-8.2.6.ebuild:
  Stable for HPPA (bug #224743).

  02 Nov 2008; Ferris McCormick <fmccor@gentoo.org> asciidoc-8.2.6.ebuild:
  Sparc stable, Bug #224743.

  02 Nov 2008; Markus Meier <maekke@gentoo.org> asciidoc-8.2.6.ebuild:
  amd64/x86 stable, bug #224743

*asciidoc-8.2.7 (18 Oct 2008)

  18 Oct 2008; Peter Volkov <pva@gentoo.org> +asciidoc-8.2.7.ebuild:
  Version bump, thank Alex Efros for report, bug #240355, also should fix
  bug #193966.

*asciidoc-8.2.6 (16 Jun 2008)

  16 Jun 2008; Leonardo Boshell <leonardop@gentoo.org>
  -asciidoc-7.1.2.ebuild, +asciidoc-8.2.6.ebuild:
  Version bump. Added 'vim-syntax' flag (thanks to Vaclav Slavik for the
  patch on bug #190702).

  25 Jan 2008; Fabian Groffen <grobian@gentoo.org> asciidoc-7.0.4.ebuild,
  asciidoc-7.1.2.ebuild, asciidoc-8.1.0.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  16 May 2007; Greg Kroah-Hartman <gregkh@gentoo.org> asciidoc-8.1.0.ebuild:
  add ~arm, ~s390, ~sh, and ~x86-fbsd so that dev-util/tig can rely on this
  package.

  12 Mar 2007; Leonardo Boshell <leonardop@gentoo.org> metadata.xml:
  Replacing text-markup herd with the new sgml herd.

  12 Jan 2007; Robin H. Johnson <robbat2@gentoo.org> asciidoc-7.1.2.ebuild,
  asciidoc-8.1.0.ebuild:
  a2x calls xsltproc at runtime, so fix deps.

*asciidoc-8.1.0 (02 Nov 2006)

  02 Nov 2006; Leonardo Boshell <leonardop@gentoo.org>