@@ -1,4 +1,6 @@
 DIST asciidoc-8.2.7.tar.gz 843238 RMD160 d9b19b5bd90a7ee26b3d63ba8b5f6ce60841e62c SHA1 ec784654f01f3aa71af6453c8985839010759fab SHA256 da021d8f32e1bcacfd11b5bb12bd9a9cd9ec9532ad1a54bcd53fed211fe71af6
+DIST asciidoc-8.4.4.tar.gz 1160222 RMD160 96eb1569db0fa8c2e78cc713ee72a0c25646d3be SHA1 0306d1a41eb1060873ba4fa655112aeaa64001d1 SHA256 43181d4753376fe22d8a7949a94b5ebb439fd94a7b92791e9126e82632adfa62
 EBUILD asciidoc-8.2.7.ebuild 1746 RMD160 2844b5697962600847aaa4287b4e7fd2685d82d1 SHA1 d989c59d067cdc70778d9e51859f3f82d23dab1c SHA256 6789b8cad68537fb43d0ee3c08949f061b2e5738496c0b61907c89b1ae3cb7fb
-MISC ChangeLog 6263 RMD160 a39dde7ba96f38991385dff25f48d29c01e0e3d8 SHA1 b3bb6c0cae37aaefa9d945cfad8f89b415c109ff SHA256 b00f749661cd2bb68f98f38cb7e3edbcc91c8517af279f2a2bf4e3a79562c996
+EBUILD asciidoc-8.4.4.ebuild 1856 RMD160 9a96463c3a289b2519d227ae6f9a2aca4dd253e9 SHA1 31e6ddd46196bb0cb66481b955ea8af9c0cf1a73 SHA256 ae85a94348508eca72514c3cc85ced7d32962c5a16dd555546b04f166957cddc
+MISC ChangeLog 6440 RMD160 926c72f9ca6be9698c4c9cfe44da4c26815a3541 SHA1 6541095259de3541ba8a6677085cecaa21862bbb SHA256 e58de2a75e038d7ff3db5d4a01522d860896218cc6d698aecc796795d2b79ada
 MISC metadata.xml 159 RMD160 a94e7b2c191d1593b8bc416d266571e001c2f673 SHA1 3c1d0831d8acacef390234d20d7711cabded861a SHA256 52cf1b9dda72e2d61fef95515c8a124ac9f1196e5509e5636e269f396fcba8a3
